fix: updated overflowing text of post admin

--- a/src/style/app-fixed.module.css
+++ b/src/style/app-fixed.module.css
@@ -4178,7 +4178,6 @@ form label,
 
 .cardOrgPostCard {
   width: 100%;
-  height: 33rem;
   margin-bottom: 2rem;
 }
 
